Prevent scrollbar from rescaling.

--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -1,3 +1,6 @@
+html {
+    width: 100 vw;
+}
 .projectItem{
     background-color: silver;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
